@@ -37,38 +37,34 @@
 package org.vrjuggler.tweek.event;
 
 import java.util.EventObject;
-import org.vrjuggler.tweek.beans.FileLoader;
+import org.vrjuggler.tweek.beans.UndoHandler;
 
 
 /**
- * Event generated by a Tweek Bean when a file manipulation activity has
- * taken place.
+ * Event generated by a Tweek Bean when an undo/redo event has taken place.
  *
- * @see FileActionListener
+ * @see UndoActionListener
  *
- * @since 0.92.3
+ * @since 0.92.4
  */
-public class FileActionEvent extends EventObject
+public class UndoActionEvent extends EventObject
 {
-   public FileActionEvent(FileLoader source)
+   public UndoActionEvent(UndoHandler source)
    {
       super(source);
-      fileLoader = source;
+      undoHandler = source;
    }
 
-   /**
-    * @since 0.92.4
-    */
-   public FileActionEvent(Object source, FileLoader loader)
+   public UndoActionEvent(Object source, UndoHandler handler)
    {
       super(source);
-      fileLoader = loader;
+      undoHandler = handler;
    }
 
-   public FileLoader getFileLoader()
+   public UndoHandler getUndoHandler()
    {
-      return fileLoader;
+      return undoHandler;
    }
 
-   private FileLoader fileLoader = null;
+   private UndoHandler undoHandler = null;
 }
