@@ -36,39 +36,16 @@
 
 package org.vrjuggler.tweek.event;
 
-import java.util.EventObject;
-import org.vrjuggler.tweek.beans.FileLoader;
-
 
 /**
- * Event generated by a Tweek Bean when a file manipulation activity has
- * taken place.
+ * Interface implemented by classes that are interested in listening for
+ * undo/redo availability in Tweek Beans.
  *
- * @see FileActionListener
+ * @see org.vrjuggler.tweek.beans.UndoHandler
  *
- * @since 0.92.3
+ * @since 0.92.4
  */
-public class FileActionEvent extends EventObject
+public interface UndoActionListener extends java.util.EventListener
 {
-   public FileActionEvent(FileLoader source)
-   {
-      super(source);
-      fileLoader = source;
-   }
-
-   /**
-    * @since 0.92.4
-    */
-   public FileActionEvent(Object source, FileLoader loader)
-   {
-      super(source);
-      fileLoader = loader;
-   }
-
-   public FileLoader getFileLoader()
-   {
-      return fileLoader;
-   }
-
-   private FileLoader fileLoader = null;
+   public void undoActionPerformed(UndoActionEvent event);
 }
